<resources>
    <string name="app_name">NodeHood</string>

    <!--Google  en la carpeta values, archivo de string-->

    <string name="title_text">Google Sign-In\nQuickstart</string>

    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="refresh_token">Get Fresh Token</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>


    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>

    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>

    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>

    <string name="desc_rest_activity">Demonstrate using Google Sign In with a Google REST API</string>
    <string name="name_rest_activity">RestApiActivity</string>

    <!-- Messages for the Rest API activity -->
    <string name="connections_fmt">Connections: %1$s</string>
    <string name="msg_contacts_failed">Get contacts failed.</string>

    <!-- TODO(user): replace with your real server client ID -->
    <!-- Server Client ID.  This should be a valid Web OAuth 2.0 Client ID obtained
         from https://console.developers.google.com/ -->
    <string name="server_client_id">NodeHood</string>
    <!---->

    <string name="sign">This is an <u>underline</u>.</string>
    <string name="back"><![CDATA[<]]></string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="outlined">Outlined mode</string>
    <string name="text">Text</string>
    <string name="mandatory">This wrong</string>
    <string name="do_you_need_an_account">¿Do you need an account?</string>
    <string name="register">Register</string>
    <string name="did_you_forget_the_password">Did you forget the password?</string>
    <string name="o">o</string>
    <string name="nodehood">NodeHood</string>
    <string name="login">Login</string>
    <string name="imagen">imagen</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="loreIpsum">Lorem ipsum dolor sit amet consectetur adipiscing elit ut, torquent laoreet lobortis libero rutrum tempus curae, convallis egestas sed facilisi morbi viverra parturient. Taciti commodo ligula non bibendum litora pellentesque iaculis nisl lobortis tincidunt porta viverra, et vestibulum sapien morbi dictum sem penatibus ultricies dui nostra. Commodo habitant sociosqu nec et risus eu nibh duis non curae ad sociis cubilia nulla metus scelerisque blandit feugiat litora, magnis porttitor proin vitae suspendisse phasellus natoque dapibus leo taciti augue id nullam sodales arcu dictumst euismod in. Lacinia sociis tortor interdum vulputate montes class magnis placerat, egestas rutrum vivamus senectus curabitur sem conubia id facilisis, mollis gravida mi eu luctus ac ad. Ultrices curabitur ultricies proin quis ligula aenean nunc consequat mi, nibh fermentum convallis congue scelerisque augue neque enim gravida, posuere ante nam natoque commodo metus fames feugiat. Interdum cursus potenti commodo fringilla metus imperdiet ut, aliquet vestibulum primis venenatis est mollis, a convallis faucibus orci torquent senectus.</string>
</resources>