<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/fondoregister"
        android:contentDescription="@string/imagen" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/scrim2"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/Login"

        android:layout_width="291dp"
        android:layout_height="73dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/pottaone"
        android:text="NodeHood"
        android:textAlignment="inherit"
        android:textColor="@color/verdeA"
        android:textSize="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/buttonCancel"
        android:layout_width="41dp"
        android:layout_height="90dp"
        android:fontFamily="@font/poppins"
        android:text="@string/back"
        android:textColor="@color/verdeA"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/text_input_layout_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.064"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Login"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="65dp"
        android:layout_height="36dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/Login" />

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="@dimen/elevation_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UnusedAttribute"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_email"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:hint="@string/email"
        style="@style/AppTheme.TextInputLayout"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editRegisterEmailAddress"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bordes_redondos"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/form_margin_top"
        android:hint="@string/username"
        style="@style/AppTheme.TextInputLayout"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_email">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editRegisterPersonName"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bordes_redondos"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_pass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/form_margin_top"
        android:hint="@string/password"
        app:passwordToggleEnabled="true"
        style="@style/AppTheme.EditTextError"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/username">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editPassword"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bordes_redondos"
            android:inputType="textPassword" />


    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonRegisterConfirm"
        style="@style/ButtonStraight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:background="@drawable/bordes_redondos"
        android:fontFamily="@font/poppins"
        android:text="@string/register"
        android:textColor="@android:color/white"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout_pass"
        app:layout_constraintRight_toLeftOf="@id/guideline2"
        tools:layout_editor_absoluteY="470dp"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.08" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.92" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="232dp"
        android:layout_height="52dp"
        android:layout_marginTop="68dp"
        android:background="@drawable/bordes_redondos"
        android:text="@string/termsconditions"
        android:textColor="@color/verdeA"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegisterConfirm" />


</androidx.constraintlayout.widget.ConstraintLayout>